# bineval

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: prd.md
examples/: end_to_end.rs  evaluate.rs  generate.rs
src/: error.rs  evaluate.rs  generate.rs  lib.rs  llm.rs  lm.rs  main.rs  score.rs  types.rs
tests/: live.rs
