[package]
name = "bineval"
version = "0.1.0"
edition = "2024"
authors = ["Charath Ranganathan <charath@pragmatik.tech>"]
license = "MIT"
description = "Interpretable LLM evaluation via binary questions (BinEval), built on Rig."
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3"
rig-core = "0.39.0"
schemars = "1.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
